# zyx

./: .clang-format  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  RENAME_PLAN.md  RENAME_SUMMARY.md  UNSUPPORTED_CYPER_FEATURES.md  UNSUPPORTED_CYPHER_FEATURES.md  WITH_CLAUSE_EXPLANATION.md  ansi_color_demo.sh  codecov.yml  compiler_options.ini  compiler_options_mac.ini  compiler_options_wasm.ini  compiler_options_win64.ini  conanfile.py  conanfile.txt  environment.yml  meson.build  meson_options.txt  package-lock.json  question.md
apps/benchmark/: BenchmarkCases.hpp  BenchmarkConcurrency.hpp  BenchmarkConfig.hpp  BenchmarkFramework.hpp  BenchmarkOptimizer.hpp  BenchmarkSelection.hpp  BenchmarkStorage.hpp  BenchmarkVector.hpp  main.cpp  meson.build
apps/cli/: main.cpp  meson.build
bindings/nodejs/: .gitignore  CMakeLists.txt  README.md  example.js  index.d.ts  package-lock.json  package.json
bindings/nodejs/lib/: database.js  index.js  native.js  result.js  transaction.js
bindings/nodejs/src/: addon.cpp
bindings/nodejs/test/: basic.test.js
bindings/python/: README.md  meson.build  pyproject.toml  undef_python_tokens.h
bindings/python/tests/: conftest.py  test_basic.py  test_parameterized.py  test_result.py  test_robustness.py  test_sequential.py  test_transactions.py  test_types.py
lib/inputxx/: meson.build
lib/inputxx/src/: Session.cpp
lib/inputxx/tests/: test_Session.cpp
src/: meson.build
src/api/: CApi.cpp  DatabaseImpl.cpp
src/cli/: CommandLineInterface.cpp  CypherCompleter.cpp  DebugCommandHandler.cpp  ImportCommand.cpp  Repl.cpp
src/cli/repl/: Session.cpp
src/config/: SystemConfigManager.cpp
src/core/: Blob.cpp  BlobChainManager.cpp  Database.cpp  Edge.cpp  Entity.cpp  Index.cpp  IndexTreeManager.cpp  Node.cpp  Property.cpp  PropertyTypes.cpp  PropertyValue.cpp  Query.cpp  State.cpp  StateChainManager.cpp  StateRegistry.cpp  TemporalTypes.cpp  Transaction.cpp  TransactionManager.cpp
src/core/query/: QueryEngine.cpp  QueryExecutor.cpp  QueryPlanner.cpp
src/debug/: PerfTrace.cpp  PlanVisualizer.cpp  PlanVisualizer.hpp
src/parser/: meson.build
src/parser/common/: IQueryParser.hpp
src/parser/cypher/: Cypher.g4  Cypher.interp  Cypher.tokens  CypherBaseVisitor.h  CypherLexer.cpp  CypherLexer.h  CypherLexer.interp  CypherParser.cpp  CypherParser.h  CypherParserImpl.cpp  CypherParserImpl.hpp  CypherToPlanVisitor.cpp  CypherToPlanVisitor.hpp  CypherVisitor.h  generate.sh  meson.build
src/query/: QueryBuilder.cpp  QueryContext.cpp  QueryEngine.cpp  QueryErrorMessages.cpp  QueryExecutor.cpp  QueryGuard.cpp  QueryPlanner.cpp  UnifiedQueryView.cpp
src/query/algorithm/: GraphAlgorithm.cpp  GraphProjection.cpp
src/query/api/: QueryBuilder.cpp  QueryEngine.cpp
src/query/execution/: QueryExecutor.cpp  Record.cpp
src/query/expressions/: AllFunction.cpp  AnyFunction.cpp  BuiltinFunctions.hpp  EntityIntrospectionFunction.cpp  EvaluationContext.cpp  ExistsExpression.cpp  Expression.cpp  ExpressionEvaluationHelper.cpp  ExpressionEvaluator.cpp  ExpressionUtils.cpp  FunctionRegistry.cpp  IsNullExpression.cpp  ListComprehensionExpression.cpp  ListFunctions.cpp  ListLiteralExpression.cpp  ListSliceExpression.cpp  MathFunctions.cpp  NoneFunction.cpp  PatternComprehensionExpression.cpp  PredicateFunction.cpp  QuantifierFunctionExpression.cpp  ReduceExpression.cpp  SingleFunction.cpp  StringFunctions.cpp  TemporalFunctions.cpp  TypeConversionFunctions.cpp  UtilityFunctions.cpp
src/query/indexes/: EntityTypeIndexManager.cpp  FullTextIndex.cpp  IndexBuilder.cpp  IndexManager.cpp  LabelIndex.cpp  PropertyIndex.cpp  RelationshipIndex.cpp
src/query/ir/: LogicalPlanBuilder.cpp  SemanticAnalyzer.cpp
src/query/logical/: LogicalOperator.cpp
src/query/optimizer/: Optimizer.cpp  StatisticsCollector.cpp
src/query/planner/: PhysicalPlanConverter.cpp  PipelineValidator.cpp  ProcedureRegistry.cpp  QueryPlanner.cpp
src/query/strategies/: TraversalQuery.cpp
src/storage/: BlobStore.cpp  DataManager.cpp  DatabaseInspector.cpp  DeletionManager.cpp  EntityReferenceUpdater.cpp  FileHeaderManager.cpp  FileStorage.cpp  FileStorageLoad.cpp  FileStorageSave.cpp  FileTruncator.cpp  IDAllocator.cpp  IntegrityChecker.cpp  IntervalSet.cpp  PageBufferPool.cpp  PersistenceManager.cpp  PropertyStorage.cpp  SegmentAllocator.cpp  SegmentCompactor.cpp  SegmentIndexManager.cpp  SegmentTracker.cpp  SpaceManager.cpp  StorageBootstrap.cpp  StorageIO.cpp  StorageWriter.cpp
src/storage/constraints/: ConstraintManager.cpp  NodeKeyConstraint.cpp  UniqueConstraint.cpp
src/storage/data/: BaseEntityManager.cpp  BlobManager.cpp  DataManager.cpp  EdgeManager.cpp  EntityObserverManager.cpp  IndexEntityManager.cpp  NodeManager.cpp  PropertyEntityManager.cpp  PropertyManager.cpp  StateManager.cpp  TransactionContext.cpp
src/storage/dictionaries/: LabelTokenRegistry.cpp  TokenRegistry.cpp
src/storage/indexes/: EntityTypeIndexManager.cpp  IndexBuilder.cpp  IndexManager.cpp  LabelIndex.cpp  PropertyIndex.cpp  VectorIndexManager.cpp
src/storage/wal/: WALApplier.cpp  (+5 more)
src/traversal/: RelationshipTraversal.cpp
src/utils/: ChecksumUtils.cpp  CompressUtils.cpp  Serializer.cpp
src/vector/: VectorIndexRegistry.cpp
tests/: meson.build
tests/include/: ApiTestFixture.hpp  QueryTestFixture.hpp  TestTreeManagerConfig.hpp
tests/integration/: test_BugVerification.cpp  test_IntegrationAggregateProjection.cpp  test_IntegrationConstraints.cpp  test_IntegrationCrud.cpp  test_IntegrationCypherAdvancedFeatures.cpp  test_IntegrationCypherClauses.cpp  test_IntegrationCypherCombinations.cpp  test_IntegrationCypherExpressionDepth.cpp  test_IntegrationCypherExpressions.cpp  test_IntegrationCypherFiltering.cpp  test_IntegrationCypherNewFeatures.cpp  test_IntegrationCypherPatterns.cpp  test_IntegrationCypherWithPipeline.cpp  test_IntegrationDatabase.cpp  test_IntegrationHeterogeneousLists.cpp  test_IntegrationPersistence.cpp  test_IntegrationQuery.cpp  test_IntegrationSubqueryFeatures.cpp  test_IntegrationTransaction.cpp  test_ReadOnlyTransaction.cpp
tests/src/: test_main.cpp
(+1246 files in other folders)
