[build-system]
requires = ["meson-python>=0.16.0", "pybind11>=2.13"]
build-backend = "mesonpy"

[project]
name = "zyxdb"
description = "Python bindings for ZYX graph database engine"
dynamic = ["version"]
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C++",
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.urls]
Homepage = "https://nexepic.github.io/zyx/"
Repository = "https://github.com/nexepic/zyx"
Documentation = "https://nexepic.github.io/zyx/"
