# Unit tests for query expressions module

test_Expressions_Unit = executable(
  'test_Expressions_Unit',
  '../test_Expressions_Unit.cpp',
  dependencies: [gtest_dep, metrix_core_dep],
  install: false
)

test('test_Expressions_Unit', test_Expressions_Unit)

# FunctionRegistry unit tests
test_FunctionRegistry_Unit = executable(
  'test_FunctionRegistry_Unit',
  'test_FunctionRegistry_Unit.cpp',
  dependencies: [gtest_dep, metrix_core_dep],
  install: false
)

test('test_FunctionRegistry_Unit', test_FunctionRegistry_Unit)

# HeterogeneousLists unit tests
test_HeterogeneousLists_Unit = executable(
  'test_HeterogeneousLists_Unit',
  'test_HeterogeneousLists_Unit.cpp',
  dependencies: [gtest_dep, metrix_core_dep],
  install: false
)

test('test_HeterogeneousLists_Unit', test_HeterogeneousLists_Unit)
